# CNCOnlineForwarder

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: action.yaml
CNCOnlineForwarder/: BuildConfiguration.h  BuildConfiguration.hpp  CMakeLists.txt  IOManager.hpp  main.cpp  precompiled.h  precompiled.hpp
CNCOnlineForwarder.Exe/: CMakeLists.txt  main.cpp
CNCOnlineForwarder.Tests/: BoostTest.cmake  BoostTestAddTests.cmake  CMakeLists.txt  TCPTests.cpp  asioFutureHelper.hpp
CNCOnlineForwarder/Logging/: Logging.cpp  Logging.h  Logging.hpp
CNCOnlineForwarder/NatNeg/: GameConnection.cpp  GameConnection.h  GameConnection.hpp  InitialPhase.cpp  InitialPhase.h  InitialPhase.hpp  NatNegPacket.hpp  NatNegProxy.cpp  NatNegProxy.h  NatNegProxy.hpp
CNCOnlineForwarder/TCPProxy/: TCPConnection.cpp  TCPConnection.hpp  TCPProxy.cpp  TCPProxy.hpp
CNCOnlineForwarder/Utility/: PendingActions.hpp  ProxyAddressTranslator.cpp  ProxyAddressTranslator.h  ProxyAddressTranslator.hpp  ReadHandler.hpp  SimpleHTTPClient.cpp  SimpleHTTPClient.h  SimpleHTTPClient.hpp  SimpleWriteHandler.hpp  WeakRefHandler.hpp  WithStrand.hpp
